# sparrow_agent

./: .gitignore  Cargo.toml  README.md
.sparrow_agent/traces/: task_01KR95QXCCW5CV3463X3T8M15W.sparrow-trace.json  task_01KRCXC10FSPCP2JRRA0F62M5H.sparrow-trace.json
docs/: agent-call-visualization-agent-plan.md  agent-call-visualization-frontend-plan.md  context-window-management-plan.md  filesystem-capability-implementation-plan.md  frontend-agent-trace-visualization-plan.md  streaming-thinking-display-plan.md
docs/superpowers/plans/: 2026-05-10-cli-browser-loop-observability.md  2026-05-10-frontend-loop-tool-parallel-fix.md  (+2 more)
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: App.test.tsx  App.tsx  index.css  router.ts
frontend/src/api/: agentTrace.ts
src/: agent.rs  api.rs  bash_approval_gate.rs  bash_approval_policy.rs  bash_model_classifier.rs  bash_risk.rs  bash_runner.rs  cli_observer.rs  client.rs  config.rs  console.rs  conversation_store.rs  debug.rs  lib.rs  local_tools.rs  main.rs  rust_wasm_runner.rs  server.rs  streaming.rs  tool_provider.rs  tool_registry.rs  tool_result_processor.rs  tools.rs  trace.rs  trace_compaction.rs  trace_file.rs  trace_store.rs
src/mcp/: client.rs  filesystem_provider.rs  mod.rs  protocol.rs  stdio_transport.rs
tests/: bash_approval_gate_contract.rs  bash_approval_policy_contract.rs  bash_risk_contract.rs  bash_runner_contract.rs  cli_observer_contract.rs  local_bash_tool_contract.rs  server_contract.rs  trace_compaction_contract.rs  trace_contract.rs  trace_file_contract.rs  trace_store_contract.rs
(+24 files in other folders)
