[package]
name = "sparrow_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
globset = "0.4"
indicatif = { version = "0.18.4", features = ["in_memory"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3"
tokio = { version = "1.52.1", features = ["full"] }
url = "2"
wasmtime = "30"
