[package]
name = "sparrow_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3"
futures-util = "0.3"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4"
indicatif = { version = "0.18.4", features = ["in_memory"] }
libc = "0.2"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
ulid = "1"
unicode-width = "0.2"
url = "2"
wasmtime = "30"
